Closed Bug 233611 Opened 21 years ago Closed 19 years ago

Download Manager Closes after download is cancelled, retried, and cancelled again

Categories

(Toolkit :: Downloads API, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: alexchu2643, Assigned: son.le0)

Details

Attachments

(1 file)

User-Agent: Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6) Gecko/20040206 Firefox/0.8 If there is a download running, it is cancelled, retried, and then cancelled again, the download cancels and closes the download manager. Reproducible: Always Steps to Reproduce: 1. Start download 2. Cancel 3. Retry 4. Cancel again Actual Results: Download manager erroneously closed. Expected Results: Cancelled the download and remained open.
I've been checking this out and I'm not quite sure what the complaint is. I think I am confused by the 'retried and cancelled again' part because when I start downloading something (with the download manager closed when I start the download), and hit cancel then the download manager closes. I tried this with the download manager already open, and I was able to cancel and restart the download to my heart's content without the download manager closing.
There is definitely some incorrect behaviour here. Following the steps to repro in comment 0, when I started the download, it popped up the download manager. When I clicked cancel, the download cancelled but the download manager stayed open (this should happen). When I clicked retry, the download restarted and stayed open. When I hit cancel again, it cancelled the download and closed the download manager (the download manager shouldn't have closed). This happened in Firefox 0.8 on Windows and Linux. --> All/All
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → All
QA Contact: aebrahim
Hardware: PC → All
Blocks: 262161
No longer blocks: 262161
Tried. tried many times in a row with different downloads. Was unable to produce
Flags: blocking1.8rc1?
To reproduce, you need to have "Close the Download Manager when all downloads are complete" checked. Confirmed still present in 20051006 trunk.
Flags: blocking1.8rc1? → blocking1.8rc1-
Flags: blocking1.9a1?
Attached patch patch v0Splinter Review
Don't send 'dl-done' notifications for cancelled downloads.
Attachment #210841 - Flags: review?(neil)
Comment on attachment 210841 [details] [diff] [review] patch v0 Sorry, this isn't my area.
Attachment #210841 - Flags: review?(neil)
Attachment #210841 - Flags: review?(cbiesinger)
Since you're patching in toolkit, per http://www.mozilla.org/projects/toolkit/review.html you probably want review from mconnor (unless biesi's added toolkit to all his other responsibilities recently).
Comment on attachment 210841 [details] [diff] [review] patch v0 Didn't see that page. Updating review request. Thanks.
Attachment #210841 - Flags: review?(cbiesinger) → review?(mconnor)
Comment on attachment 210841 [details] [diff] [review] patch v0 r+a=me
Attachment #210841 - Flags: review?(mconnor)
Attachment #210841 - Flags: review+
Attachment #210841 - Flags: approval-branch-1.8.1+
Assignee: bugs → nobody
QA Contact: ali → download.manager
Checkin please.
Assignee: nobody → son.le0
Whiteboard: [checkin needed]
Target Milestone: --- → Firefox 2 beta2
Version: unspecified → 2.0 Branch
mozilla/toolkit/components/downloads/src/nsDownloadManager.cpp 1.68
Status: NEW → RESOLVED
Closed: 19 years ago
Flags: blocking1.9a1?
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Target Milestone: Firefox 2 beta2 → Firefox 3 alpha1
Version: 2.0 Branch → Trunk
Attachment #210841 - Flags: approval-branch-1.8.1+
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: