Bug 233611: Download Manager Closes after download is cancelled, retried, and cancelled again, patch by Son Le <son.le0@gmail.com>, r=mconnor