toolkit/components/downloads/src/nsDownloadManager.cpp
@@ -2214,6 +2214,8 @@ nsDownload::OnStateChange(nsIWebProgress* aWebProgress,
           }
         }
       }
+
+      gObserverService->NotifyObservers(NS_STATIC_CAST(nsIDownload *, this), "dl-done", nsnull);
     }
 
     nsAutoString path;
@@ -2241,8 +2243,6 @@ nsDownload::OnStateChange(nsIWebProgress* aWebProgress,
       }
     }
 #endif
-
-    gObserverService->NotifyObservers(NS_STATIC_CAST(nsIDownload *, this), "dl-done", nsnull);
 
     // break the cycle we created in AddDownload
     mCancelable = nsnull;
@@ -2398,4 +2398,3 @@ nsDownload::IsPaused()
 {
   return mPaused;
 }
-
